# unnamed-low-level-script

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  code.c3a  example_fibonacci.fgs  example_fibonacci_complexe.fgs  example_fibonacci_complexe.txt  fgs.c  fgs.exe.stackdump  fgs.h  fgs_comp.c  fgs_comp.l  fgs_comp.y  fgs_copia.c  fgs_copia.h  fgs_file_treatment.c  fgs_internals.h  fgs_interpreter_ops.c  fgs_interpreter_ops.h  fgs_parser.c  fgs_prints.c  fgs_stack.c  fgs_stack.h  fgs_structs.h  log.txt  ops.h  output.byt  prac3.c  prac3.exe.stackdump  prac3.h  prac3.l  prac3.y  prac3l.c  prac3y.c  prac3y.h  prac3y.output  test.c
Documentation/: Global objectives.rtf
src/: fgs.c  fgs_comp.c  fgs_comp.l  fgs_comp.y  fgs_comp_symtab.c  fgs_comp_symtab.h  fgs_interpreter_ops.c  fgs_parser.c  fgs_stack.c  ops.h  test.c
src/headers/: fgs.h  fgs_comp.h  fgs_internals.h  fgs_interpreter_ops.h  ops.h
test/: example_fibonacci_complexe_molt.fgs  prova_aritmetica_areatriangle.fgs  prova_aritmetica_mul.fgs  prova_aritmetica_parametres.fgs  prova_aritmetica_return.fgs  prova_aritmetica_strings.fgs  prova_aritmetica_sum.fgs  prova_aritmetica_sum_parenth.fgs  prova_condicional_else.fgs  prova_condicional_if.fgs  prova_fibonacci.fgs  prova_fibonacci_float.fgs  prova_funcions_repetides.fgs  prova_lexic_c.fgs  prova_tipus_nou.fgs  test_string_concat.fgs  wowo.fgs
